[package]
name = "extract-shellcode"
version = "0.1.0"
edition = "2024"

description = "Small Rust toolkit for pulling shellcode out of a Windows PE and (optionally) executing it in-memory"
license = "MIT"
repository = "https://github.com/11philip22/extract-shellcode"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
goblin = "0.10.4"
